# Depth2Cloud_ICP

./: CMakeLists.txt  README.md
model/: monkey.ply  pointcloud.pcd
src/: depth2cloud.cpp  depth2cloud.m  interactive_icp.cpp  pcl_test.cpp
